# form-factory

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: advanced_form.py  basic_form.py
src/dash_form_factory/: __init__.py  factory.py  placeholder.py
tests/: __init__.py  conftest.py  test_factory.py  test_placeholder.py
